--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "id": "expanse",
-  "name": "Expanse",
+  "id": "expanse_zztalker",
+  "name": "Expanse_zztalker",
   "description": "Expanse is our new default theme, featuring expansive cover photos and clean typography."
 }
